Fixed links deletion. Fixed html overflow

--- a/Drive.WebHost/Content/Site.css
+++ b/Drive.WebHost/Content/Site.css
@@ -1,5 +1,4 @@
 ﻿html {
-    overflow: auto;
     height: 100%;
 }
 
